# fast_delegate

./: '  Cargo.toml  README.md
benches/: compare.rs
examples/: trait.rs
impl/: Cargo.toml
impl/src/: lib.rs
src/: lib.rs
tests/: associated_type.rs  const_types.rs  generic.rs  temp.rs  test.rs  test2.rs  trait.rs
