[package]
name = "delegare"
version = "0.1.0"
edition = "2021"
author = "Bruce0203 <brucefreedy@gmail.com>"
repository = "https://github.com/Bruce0203/delegare"
license = "MIT"
readme = "./README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[workspace]
members = [
    "impl"
]

[dependencies]
delegare_derive = { path = "./impl" }

[[bench]]
name = "compare"
harness = false

[dev-dependencies]
criterion = "0.5.1"
