[package]
name = "delegare"
version.workspace = true  
edition.workspace = true
author.workspace = true 
description.workspace = true
repository.workspace = true 
license.workspace = true
readme = "./README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[workspace]
members = [
    "impl"
]

[workspace.package]
version = "0.1.0"
description = "delegate struct easy"
edition = "2021"
author = "Bruce0203 <brucefreedy@gmail.com>"
repository = "https://github.com/Bruce0203/delegare"
license = "MIT"

[dependencies]
delegare_derive = { path = "./impl", version = "0.1.0" }

[[bench]]
name = "compare"
harness = false

[dev-dependencies]
criterion = "0.5.1"
